add docs for storing users
